--- a/test/public/include/_body.html
+++ b/test/public/include/_body.html
@@ -1,14 +1,11 @@
 <p>Hello, my name is <%=name%>. I'm <%=profile.age%> years old.</p>
-<script id="bodyjs" src="/js/body.js"></script>
-<script type="x-tmpl-lazypage" source="{'name':'Krasimir Tsonev2','profile':{'age':3}}">
-  <p>Hello1, my name is <&=name&>. I'm <&=profile.age&> years old.</p>
-  <jscript type="x-tmpl-lazypage" source="{'name':'Krasimir Tsonev3','profile':{'age':4}}">
-  	<p>Hello2, my name is <&&=name&&>. I'm <&&=profile.age&&> years old.</p>
-  	<jjscript type="x-tmpl-lazypage" source="{'name':'Krasimir Tsonev4','profile':{'age':5}}">
-  		<p>Hello3, my name is <&&&=name&&&>. I'm <&&&=profile.age&&&> years old.</p>
-  		<jjjscript>
-  			console.log("body1");
-  		</jjjscript>
-  	</jjscript>
-  </jscript>
-</script>
+<block
+  source="{'name':'Krasimir Tsonev4-1','profile':{'age':2}, 'class1':'t2'}"
+>
+  <div :class="class1" :id="$imports.query('a')">
+    {{ name }}-{{ $imports.query("a") }}-{{ $imports.path(0) }}
+  </div>
+  <%if(profile.age>1){%>
+  <span>{{ profile.age }}</span>
+  <%}%>
+</block>
