--- a/test/static/include/_nav.html
+++ b/test/static/include/_nav.html
@@ -1,9 +1,5 @@
-<link
-  :href="$config.root+'/css/lazypage.css'"
-  rel="stylesheet"
-  type="text/css"
-/>
-<script :src="$config.root+'/js/lazypage.js'"></script>
+<link :href="$config.root+'/css/lazypage-switch.css'" rel="stylesheet" type="text/css" />
+<script :src="$config.root+'/js/lazypage-switch.js'"></script>
 <style>
   ul {
     display: inline-block;
@@ -11,19 +7,23 @@
     padding-left: 0;
     list-style-type: none;
   }
-  ul li:first-child {
+
+  .title {
     font-weight: bold;
     font-size: 20px;
     margin-bottom: 5px;
   }
-  ul li:first-child a {
+
+  .title a {
     color: #333;
   }
+
   a {
     line-height: 16px;
     text-decoration: none;
     color: #666;
   }
+
   .conatiner {
     width: 300px;
     height: 300px;
@@ -37,20 +37,42 @@
 </style>
 <% var root = $config.root+"/switchpage" %>
 <ul>
-  <li><a :href="$config.root+'/'" data-direct="true">home</a></li>
-  <li><a :href="root+'/a'">a (slide)</a></li>
+  <li class="title"><a :href="$config.root+'/'" data-direct="true">home</a></li>
+  <li><a :href="root+'/'">a (slide)</a></li>
   <li><a :href="root+'/b'">b (fade)</a></li>
   <li><a :href="root+'/c'">c (pop)</a></li>
 </ul>
 <ul>
-  <li><a :href="root+'/1/'">1</a></li>
   <li><a :href="root+'/1/1'">1/1</a></li>
   <li><a :href="root+'/1/2'">1/2</a></li>
   <li><a :href="root+'/1/3'">1/3</a></li>
 </ul>
 <ul>
-  <li><a :href="root+'/2/'">2</a></li>
   <li><a :href="root+'/2/1'">2/1</a></li>
   <li><a :href="root+'/2/2'">2/2</a></li>
   <li><a :href="root+'/2/3'" data-history="false">2/3 (no history)</a></li>
 </ul>
+<script>
+  LazyPage.setIgnorePath("/switchpage");
+  LazyPage.openPreLoad();
+
+  LazyPage.addEventListener(LazyPage.PageEvent.PAGE_SWITCH_BEFORE, test);
+  LazyPage.addEventListener(LazyPage.PageEvent.PAGE_FIRST_IN, test);
+  LazyPage.addEventListener(LazyPage.PageEvent.PAGE_IN_START, test);
+  LazyPage.addEventListener(LazyPage.PageEvent.PAGE_IN_END, test);
+  LazyPage.addEventListener(LazyPage.PageEvent.PAGE_OUT_START, test);
+  LazyPage.addEventListener(LazyPage.PageEvent.PAGE_OUT_END, test);
+  function test(e) {
+    console.log(e);
+    if (e.type == LazyPage.PageEvent.PAGE_SWITCH_BEFORE) {
+      //e.data.hello = true;
+      var from = e.data.from;
+      var to = e.data.to;
+      var fromPath = from.getAttribute("data-path");
+      var toPath = to.getAttribute("data-path");
+      if (fromPath.charAt(1) == toPath.charAt(1)) {
+        e.data.animate = "slidevertical";
+      }
+    }
+  }
+</script>
