--- a/test/static/include/_head.html
+++ b/test/static/include/_head.html
@@ -2,59 +2,30 @@
   a {
     color: #000;
   }
+
   a.active {
     color: red;
     text-decoration: none;
   }
+
   pre {
     background: #272822;
     overflow: auto;
     border-radius: 0.3em;
   }
+
   code {
     color: #e8eaf6;
   }
 </style>
 <div>
   <a :href="$config.root+'/'" :class=" $path(0)=='' ? 'active' : '' ">首页</a>
-  <a
-    :href="$config.root+'/loadsource'"
-    :class=" $path(0)=='loadsource' ? 'active' : '' "
-    >加载外部数据</a
-  >
-  <a
-    :href="$config.root+'/loadtemplete'"
-    :class=" $path(0)=='loadtemplete' ? 'active' : '' "
-    >加载外部模板</a
-  >
-  <a
-    :href="$config.root+'/multiblock'"
-    :class=" $path(0)=='multiblock' ? 'active' : '' "
-    >嵌套模板</a
-  >
-  <a
-    :href="$config.root+'/waitblock'"
-    :class=" $path(0)=='waitblock' ? 'active' : '' "
-    >数据依赖模板</a
-  >
-  <a
-    :href="$config.root+'/requestpath/hello'"
-    :class=" $path(0)=='requestpath' ? 'active' : '' "
-    >获取URL路径</a
-  >
-  <a
-    :href="$config.root+'/requestquery?a=hello'"
-    :class=" $path(0)=='requestquery' ? 'active' : '' "
-    >获取URL参数</a
-  >
-  <a
-    :href="$config.root+'/definevariable'"
-    :class=" $path(0)=='definevariable' ? 'active' : '' "
-    >全局变量</a
-  >
-  <a
-    :href="$config.root+'/definemethod'"
-    :class=" $path(0)=='definemethod' ? 'active' : '' "
-    >全局函数</a
-  >
+  <a :href="$config.root+'/loadsource'" :class=" $path(0)=='loadsource' ? 'active' : '' ">加载外部数据</a>
+  <a :href="$config.root+'/loadtemplete'" :class=" $path(0)=='loadtemplete' ? 'active' : '' ">加载外部模板</a>
+  <a :href="$config.root+'/multiblock'" :class=" $path(0)=='multiblock' ? 'active' : '' ">嵌套模板</a>
+  <a :href="$config.root+'/waitblock'" :class=" $path(0)=='waitblock' ? 'active' : '' ">数据依赖模板</a>
+  <a :href="$config.root+'/requestpath/hello'" :class=" $path(0)=='requestpath' ? 'active' : '' ">获取URL路径</a>
+  <a :href="$config.root+'/requestquery?a=hello'" :class=" $path(0)=='requestquery' ? 'active' : '' ">获取URL参数</a>
+  <a :href="$config.root+'/definevariable'" :class=" $path(0)=='definevariable' ? 'active' : '' ">全局变量</a>
+  <a :href="$config.root+'/definemethod'" :class=" $path(0)=='definemethod' ? 'active' : '' ">全局函数</a>
 </div>
